updating search bar button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="media-object-section">
-                    <h4 class="text-center">Welcome to Brewery Finder | Select from the Below Search Criteria to Begin:
+                    <h4 class="text-center">Welcome to Brewery Finder ||  Select from the Below Search Criteria to Begin:
                     </h4>
                 </div>
             </div>
@@ -128,6 +128,8 @@
                     <option>$$$</option>
                 </select>
             </label>
+
+            <button type="button" class="button warning"><strong>Find Breweries</strong></button>
 
         </div>
 
