--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <hr>
 
-    <div id="map" style="width:100%;height:400px"></div>
+    <div id="map"></div>
     
     <div id="otherStuff" style="width: 50%;height:500px"></div>
     
