--- a/testindex.html
+++ b/testindex.html
@@ -7,9 +7,10 @@
     <title>Brewery Finder</title>
 </head>
 <body>
-    <div> brew info </div>
+    <div id="brewInfo"> brew info
         <input id="city"> Enter City </input>
         <button id="type"> Click Me </button>
+    </div>
 <script src="script.js"></script>
 </body>
 </html>
