reformatting label on dropdown selector menu

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </label>
                     </form>
 
-                    <lable>Brewery Type
+                    <label>Brewery Type
                         <select class="search-criteria" id="brewery-type">
                             <option value="Micro">Micro</option>
                             <option value="Regional">Regional</option>
@@ -87,7 +87,7 @@
                             <option value="Contract">Contract</option>
                             <option value="Proprietor">Proprietor</option>
                         </select>
-                    </lable>
+                    </label>
 
                     <label>Price
                         <select class="search-criteria"> 
