working on for loop. Have data-type.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
-=======
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
->>>>>>> a8cf88b87f99bdc098044883e1b11cc6a5de679a
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
     <title>Brewery Finder - Locate a Brewery in Your Area</title>
@@ -111,7 +107,7 @@
         </div>
 
         <hr>
-        <div class="brewNames"></div>
+        <div class="brewNames menu"></div>
 
 
 
