data types saving into local storage.

--- a/index.html
+++ b/index.html
@@ -107,14 +107,13 @@
         </div>
 
         <hr>
-        <div class="brewNames menu"></div>
-
-
+        <div class="brewNames"></div>
 
         <hr>
     <div id="map"></div>
     
-    <div id="otherStuff" style="width: 50%;height:500px"></div>
+    <div id="brewInfo" style="width: 50%;height:500px"></div>
+
     
 </div>
 
