updating yelp API call, making the searched breweries appear as buttons

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
 
         <hr>
-        <div class="brewNames"></div>
+        <div class="brewNames menu button-group vertical large"></div>
 
         <hr>
     <div id="map"></div>
