transparent nav bar

--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
             <div class="top-bar" id="responsive-menu">
                 <ul class="dropdown menu" data-dropdown-menu>
                     <li>
-                        <link rel="shortcut icon" type="image/png" href="favicon.png" />
-                    </li>
-                    <li>
                         <a href="index.html" class="clickable-navbar-link">Home</a>
                     </li>
                     <li>
@@ -55,12 +52,13 @@
             <div class="media-object">
                 <div class="media-object-section">
                     <div class="thumbnail">
-                        <img id="logo" src="Company-logo.png" alt="Brewery Finder logo">
+                        <img id="logo" src="assets/test-logo.png" alt="Brewery Finder logo">
                     </div>
                 </div>
                 <div class="media-object-section" id="welcome-to-brewery-finder">
-                    <h4 id="welcome-header" class="text-center">Welcome to Brewery Finder || Select from the Below
-                        Search Criteria to Begin:</h4>
+                    <h2 id="welcome-header" class="text-center">Welcome to Brewery Finder</h2>
+                    <h4 class=text-center> Select from the Below
+                        Search Criteria to Begin: </h4>
                 </div>
             </div>
         </div>
