added the about page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <a href="index.html" class="clickable-navbar-link">Home</a>
                             </li>
                             <li>
-                                <a href="#" class="clickable-navbar-link">About</a>
+                                <a href="about.html" class="clickable-navbar-link">About</a>
                             </li>
                         </ul>
                     </div>
