updating favicon in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Brewery Finder - Locate a Brewery in Your Area</title>
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="favicon.PNG" />
 
     <!-- Compressed CSS for Foundation-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
