made buttons easier to read. Also put in place an expression so when no search results are found it displays such.

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>About</title>
     <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     
     <script src="https://kit.fontawesome.com/7b1f6b431b.js" crossorigin="anonymous"></script>
   </head>
