added rounded borders. search titles are now visible.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="small-12">
                 <div class="menu" id="search-parameters">
 
-                    <label>Select State
+                    <label class="searchHeaders">Select State
                         <select class="search-criteria" id="state">
                             <option value="Alabama">Alabama</option>
                             <option value="Alaska">Alaska</option>
@@ -133,7 +133,7 @@
                         </select>
                     </label>
 
-                    <label>Brewery Type
+                    <label class="searchHeaders">Brewery Type
                         <select class="search-criteria" id="brewery-type">
                             <option value="Micro">Micro</option>
                             <option value="Regional">Regional</option>
