width down to 450 px and got items to be centered on page.

--- a/index.html
+++ b/index.html
@@ -153,8 +153,11 @@
             </div>
 
             <br>
-            
-            <div class="brewNames menu button-group vertical large"></div>
+            <div class="row">
+                <div class="col">
+                    <div class="brewNames menu button-group vertical large"></div>
+                </div>
+            </div>
 
             <br>
 
